--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>Jab We Met</header>
+	<nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>
+		Movie is a love story with comedy.
+	</summary>
+	<section id="actor">
+		Actor: Kareena Kapoor, Shahid Kapoor
+	</section>
+	<section id="quote">
+		Main apni favorite hoon.
+	</section>
+	<aside>
+		IMDb rating:7.9,
+		Release Date:25 Oct 2007
+	</aside>
+	<footer>
+		Produced By : Dhiin Mehta
+	</footer>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
