--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 		Release Date:25 Oct 2007
 	</aside>
 	<footer>
-		Produced By : Dhiin Mehta
+		Produced by: Dhiin Mehta
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
